# Teste-tecnico-triggo.ai

./: README.md  classes.py  etl.py  jpt.ipynb  pyproject.toml
.ipynb_checkpoints/: jpt-checkpoint.ipynb
staging_area/: dataset_products.csv
