[project]
name = "teste-triggoai"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre Silva",email = "andremarciliosilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
